[project]
name = "assignment9"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arctic-inference==0.1.1",
    "datasets>=4.4.1",
    "fastapi>=0.121.3",
    "huggingface-hub==0.36.0",
    "numpy==2.2.6",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.38.0",
    "vllm==0.11.2",
    "pandas>=2.3.3",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7"
]
